--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.16.2",
     "express-validator": "^6.1.1",
     "md5": "^2.2.1",
     "morgan": "~1.9.0",
