--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "exceljs": "^2.0.1",
     "express": "~4.16.0",
     "express-session": "^1.16.2",
     "express-validator": "^6.1.1",
     "md5": "^2.2.1",
     "morgan": "~1.9.0",
+    "multer": "^1.4.2",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.12.3"
+    "request": "^2.88.0",
+    "sequelize": "^5.12.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "mysql": "^2.17.1",
